@@ -6,6 +6,6 @@ public class ResourceNotFoundException extends RuntimeException {
     }
 
     public ResourceNotFoundException(String resource, String field, Object value) {
-        super(String.format("%s not found with %s: '%s'", resource, field, value));
+        super("%s not found with %s: '%s'".formatted(resource, field, value));
     }
 }
